[tool.poetry]
name = "vibrometer_analysis"
version = "0.2.0"
description = ""
authors = ["Cristóbal Tapia Camú <crtapia@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8,<4.0"
pandas = "^1.0.5"
scipy = "^1.5.1"
matplotlib = "3.1.0"
sounddevice = "^0.4.0"
pyqt5 = "^5.15.0"
pyinstaller = "^4.0"
numpy = "^1.24.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
app = "vibrometer_analysis.qt_app:main"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
yapf = "^0.32.0"
pydocstyle = "^6.3.0"
toml = "^0.10.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}
