[project]
name = "vibrometer-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.19.0",
    "pandas<2.0",
    "sounddevice>=0.5.0",
    "pyqt5>=5.15.11",
    "scipy>=1.7.1,<1.9",
    "matplotlib>=3.2.0,<3.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
