[project]
name = "vibrometer-analysis"
version = "0.2.3"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.0",
    "pandas>=2.1",
    "sounddevice>=0.5.0",
    "scipy>=1.9",
    "matplotlib>=3.4",
    "pyqt6>=6.7.1",
]

[project.scripts]
vibrometer = "vibrometer_analysis.qt_app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
